--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-jbrems",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Personal eslint configuration",
   "main": "eslint.config.js",
   "type": "module",
@@ -14,14 +14,16 @@
   "author": "Jonas Brems",
   "license": "ISC",
   "peerDependencies": {
-    "eslint": ">=8"
+    "eslint": ">=8",
+    "typescript": ">=5"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.59.11",
     "eslint": "^8.42.0",
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@eslint/js": "^8.43.0"
+    "@eslint/js": "^8.43.0",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0"
   }
 }
