--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
   "name": "eslint-config-jbrems",
-  "version": "1.0.0",
+  "version": "1.1.3",
   "description": "Personal eslint configuration",
   "main": "eslint.config.js",
-  "type": "module",
   "scripts": {
     "lint": "eslint ."
   },
@@ -12,18 +11,11 @@
     "config"
   ],
   "author": "Jonas Brems",
-  "license": "ISC",
   "peerDependencies": {
-    "eslint": ">=8",
-    "typescript": ">=5"
+    "eslint": ">=8"
   },
   "devDependencies": {
-    "eslint": "^8.42.0",
-    "typescript": "^5.1.3"
-  },
-  "dependencies": {
-    "@eslint/js": "^8.43.0",
-    "@typescript-eslint/eslint-plugin": "^5.62.0",
-    "@typescript-eslint/parser": "^5.62.0"
+    "@eslint/js": "^9.16.0",
+    "eslint": "^8.42.0"
   }
 }
