--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "eslint-config-jbrems",
   "version": "1.2.0",
   "description": "Personal eslint configuration",
+  "type": "module",
   "main": "eslint.config.js",
   "scripts": {
     "lint": "eslint ."
@@ -17,5 +18,8 @@
   "devDependencies": {
     "@eslint/js": "^9.16.0",
     "eslint": "^8.42.0"
+  },
+  "dependencies": {
+    "eslint-plugin-jsdoc": "^51.1.3"
   }
 }
